--- a/css/index.css
+++ b/css/index.css
@@ -41,6 +41,7 @@ html {
           top: 10px;
           bottom: 10px;
           left: 60px;
+          height: 16px;
           color: #ffffff;
           text-align: left;
           font-family: 'Lato', sans-serif;
