--- a/css/index.css
+++ b/css/index.css
@@ -23,7 +23,8 @@ html {
         grid-template-rows: 1fr;
         height: 50px;
         width: 100%;
-        background-color: #4a4a4a; }
+        background-color: #4a4a4a;
+        overflow: hidden; }
         html body #grid-container #grid-header object {
           grid-column: 1;
           grid-row: auto;
@@ -69,5 +70,35 @@ html {
       html body #grid-container #grid-content {
         grid-column: auto;
         grid-row: 2; }
+        html body #grid-container #grid-content #content-slogan {
+          display: block;
+          position: absolute;
+          top: 35px;
+          left: 20px;
+          max-width: 550px;
+          color: #ffffff;
+          font-family: 'Lato', sans-serif;
+          font-size: 60px;
+          font-weight: 300;
+          font-style: italic; }
+        html body #grid-container #grid-content .footer-links {
+          display: inline;
+          position: absolute;
+          bottom: 15px;
+          color: #a7a7a7;
+          font-family: 'Lato', sans-serif;
+          font-size: 15px;
+          font-style: normal;
+          font-weight: 100;
+          padding: 0px 5px 0px 5px; }
+          html body #grid-container #grid-content .footer-links:hover {
+            color: #00ff88;
+            text-decoration: underline; }
+        html body #grid-container #grid-content #content-link-faq {
+          right: 190px; }
+        html body #grid-container #grid-content #content-link-testimonials {
+          right: 80px; }
+        html body #grid-container #grid-content #content-link-plans {
+          right: 20px; }
 
 /*# sourceMappingURL=index.css.map */
