--- a/scss/index.scss
+++ b/scss/index.scss
@@ -38,6 +38,8 @@ html {
 
 				background-color: #4a4a4a;
 
+				overflow: hidden;
+
 				object {
 					grid-column: 1;
 					grid-row: auto;
@@ -106,6 +108,57 @@ html {
 			#grid-content {
 				grid-column: auto;
 				grid-row: 2;
+
+				#content-slogan {
+					display: block;
+
+					position: absolute;
+
+					top: 35px;
+					left: 20px;
+
+					max-width: 550px;
+
+					color: #ffffff;
+
+					font-family: 'Lato', sans-serif;
+					font-size: 60px;
+					font-weight: 300;
+					font-style: italic;
+				}
+
+				.footer-links {
+					display: inline;
+
+					position: absolute;
+
+					bottom: 15px;
+
+					color: #a7a7a7;
+
+					font-family: 'Lato', sans-serif;
+					font-size: 15px;
+					font-style: normal;
+					font-weight: 100;
+
+					padding: 0px 5px 0px 5px;
+
+					&:hover {
+						color: $hourly-green;
+
+						text-decoration: underline;
+					}
+				}
+
+				#content-link-faq {
+					right: 190px;
+				}
+				#content-link-testimonials {
+					right: 80px;
+				}
+				#content-link-plans {
+					right: 20px;
+				}
 			}
 		}
 	}
