--- a/scss/globals.scss
+++ b/scss/globals.scss
@@ -6,7 +6,7 @@ a,
 a:hover,
 a:active,
 a:visited {
-	display: contents;
+	display: inline;
 
 	color: initial;
 
@@ -35,7 +35,7 @@ html {
 	font-weight: 300;
 	font-style: normal;
 
-	padding: 5px 20px 5px 20px;
+	padding: 15px 20px 5px 20px;
 
 	&:hover,
 	&:active,
