--- a/css/globals.css
+++ b/css/globals.css
@@ -4,7 +4,7 @@ a:hover,
 a:active,
 a:visited {
   display: inline;
-  color: initial;
+  color: default;
   text-decoration: none;
   cursor: pointer; }
 
