--- a/scss/index.scss
+++ b/scss/index.scss
@@ -60,10 +60,9 @@ html {
 					grid-column: 1;
 					grid-row: auto;
 
-					position: absolute;
+					position: relative;
 
-					top: 10px;
-					bottom: 10px;
+					bottom: 20px;
 					left: 60px;
 
 					height: 16px;
