--- a/scss/globals.scss
+++ b/scss/globals.scss
@@ -24,6 +24,96 @@ html {
 		width: 100%;
 
 		margin: 0 auto;
+
+		#grid-container {
+			display: grid;
+
+			grid-template-columns: 1fr;
+			grid-template-rows: 50px 1fr;
+
+			height: 100%;
+			width: 100%;
+
+			#grid-header {
+				display: grid;
+
+				grid-column: auto;
+				grid-row: 1;
+
+				grid-template-columns: 120px 1fr auto auto auto auto auto;
+				grid-template-rows: 1fr;
+
+				height: 50px;
+				width: 100%;
+
+				background-color: #4a4a4a;
+
+				overflow: hidden;
+
+				object {
+					grid-column: 1;
+					grid-row: auto;
+
+					position: relative;
+
+					top: 10px;
+					bottom: 10px;
+					left: 20px;
+
+					height: 30px;
+					width: 30px;
+
+					padding-right: 10px;
+				}
+
+				#header-heading {
+					grid-column: 1;
+					grid-row: auto;
+
+					position: relative;
+
+					bottom: 25px;
+					left: 60px;
+
+					height: 16px;
+
+					color: #ffffff;
+
+					text-align: left;
+
+					font-family: 'Lato', sans-serif;
+					font-size: 20px;
+					font-weight: 300;
+					font-style: italic;
+
+					letter-spacing: 1px;
+
+					padding-right: 10px;
+					margin: 0px;
+				}
+
+				#header-nav-news {
+					grid-column: 3;
+					grid-row: auto;
+				}
+				#header-nav-timeoff {
+					grid-column: 4;
+					grid-row: auto;
+				}
+				#header-nav-roster {
+					grid-column: 5;
+					grid-row: auto;
+				}
+				#header-nav-employees {
+					grid-column: 6;
+					grid-row: auto;
+				}
+				#header-nav-login {
+					grid-column: 7;
+					grid-row: auto;
+				}
+			}
+		}
 	}
 }
 
