global input class

--- a/scss/globals.scss
+++ b/scss/globals.scss
@@ -1,6 +1,6 @@
 @import 'partials/_partials.scss';
 
-@import url('https://fonts.googleapis.com/css?family=Lato');
+@import url('https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i');
 
 a,
 a:hover,
@@ -150,5 +150,34 @@ html {
 
 			margin: 0px -20px 0px -20px;
 		}
+	}
+}
+
+.input[type='text'],
+.input[type='password'] {
+	width: 400px;
+	height: 30px;
+
+	background-color: #454545;
+
+	color: #ffffff;
+
+	justify-self: center;
+	align-self: center;
+
+	font-family: 'Lato', sans-serif;
+	font-weight: 300;
+	font-style: normal;
+
+	border: 1px solid #00ff88;
+
+	padding-left: 10px;
+
+	&::placeholder {
+		color: #ffffff;
+
+		font-family: 'Lato', sans-serif;
+		font-weight: 300;
+		font-style: normal;
 	}
 }
