--- a/css/globals.css
+++ b/css/globals.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Lato");
+@import url("https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i");
 a,
 a:hover,
 a:active,
@@ -92,5 +92,44 @@ html {
       height: 1px;
       width: auto;
       margin: 0px -20px 0px -20px; }
+
+.input[type='text'],
+.input[type='password'] {
+  width: 400px;
+  height: 30px;
+  background-color: #454545;
+  color: #ffffff;
+  justify-self: center;
+  -ms-flex-item-align: center;
+      align-self: center;
+  font-family: 'Lato', sans-serif;
+  font-weight: 300;
+  font-style: normal;
+  border: 1px solid #00ff88;
+  padding-left: 10px; }
+  .input[type='text']::-webkit-input-placeholder,
+  .input[type='password']::-webkit-input-placeholder {
+    color: #ffffff;
+    font-family: 'Lato', sans-serif;
+    font-weight: 300;
+    font-style: normal; }
+  .input[type='text']:-ms-input-placeholder,
+  .input[type='password']:-ms-input-placeholder {
+    color: #ffffff;
+    font-family: 'Lato', sans-serif;
+    font-weight: 300;
+    font-style: normal; }
+  .input[type='text']::-ms-input-placeholder,
+  .input[type='password']::-ms-input-placeholder {
+    color: #ffffff;
+    font-family: 'Lato', sans-serif;
+    font-weight: 300;
+    font-style: normal; }
+  .input[type='text']::placeholder,
+  .input[type='password']::placeholder {
+    color: #ffffff;
+    font-family: 'Lato', sans-serif;
+    font-weight: 300;
+    font-style: normal; }
 
 /*# sourceMappingURL=globals.css.map */
