--- a/scss/globals.scss
+++ b/scss/globals.scss
@@ -34,6 +34,10 @@ html {
 			height: 100%;
 			width: 100%;
 
+			#grid-content {
+				background-color: #454545;
+			}
+
 			#grid-header {
 				display: grid;
 
