--- a/css/login.css
+++ b/css/login.css
@@ -14,7 +14,8 @@ html {
       html body #grid-container #grid-content {
         display: grid;
         grid-column: auto;
-        grid-row: 2; }
+        grid-row: 2;
+        background-color: #454545; }
         html body #grid-container #grid-content #content-login-container {
           display: grid;
           grid-template-columns: 1fr;
