--- a/scss/login.scss
+++ b/scss/login.scss
@@ -25,6 +25,8 @@ html {
 				grid-column: auto;
 				grid-row: 2;
 
+				background-color: #454545;
+
 				#content-login-container {
 					display: grid;
 
