--- a/css/register.css
+++ b/css/register.css
@@ -105,8 +105,7 @@ html {
               font-size: 12px;
               font-weight: 300; }
 
-.input[type='text'],
-.input[type='password'] {
+.input[type='text'] {
   width: 300px;
   height: 25px;
   background-color: #454545;
@@ -120,31 +119,24 @@ html {
   border: 1px solid #00ff88;
   padding-left: 10px;
   margin: 0px 10px 0px 10px; }
-  .input[type='text'][type='text']:hover, .input[type='text'][type='text']:active, .input[type='text'][type='text']:focus,
-  .input[type='password'][type='text']:hover,
-  .input[type='password'][type='text']:active,
-  .input[type='password'][type='text']:focus {
+  .input[type='text'][type='text']:hover, .input[type='text'][type='text']:active, .input[type='text'][type='text']:focus {
     border: 1px solid #00ff22; }
-  .input[type='text']::-webkit-input-placeholder,
-  .input[type='password']::-webkit-input-placeholder {
+  .input[type='text']::-webkit-input-placeholder {
     color: #ffffff;
     font-family: 'Lato', sans-serif;
     font-weight: 300;
     font-style: normal; }
-  .input[type='text']:-ms-input-placeholder,
-  .input[type='password']:-ms-input-placeholder {
+  .input[type='text']:-ms-input-placeholder {
     color: #ffffff;
     font-family: 'Lato', sans-serif;
     font-weight: 300;
     font-style: normal; }
-  .input[type='text']::-ms-input-placeholder,
-  .input[type='password']::-ms-input-placeholder {
+  .input[type='text']::-ms-input-placeholder {
     color: #ffffff;
     font-family: 'Lato', sans-serif;
     font-weight: 300;
     font-style: normal; }
-  .input[type='text']::placeholder,
-  .input[type='password']::placeholder {
+  .input[type='text']::placeholder {
     color: #ffffff;
     font-family: 'Lato', sans-serif;
     font-weight: 300;
