--- a/css/globals.css
+++ b/css/globals.css
@@ -83,5 +83,13 @@ html {
   .nav:hover, .nav:active, .nav:focus {
     color: #00ff88;
     background-color: rgba(37, 37, 37, 0.4); }
-
+    .nav:hover::after, .nav:active::after, .nav:focus::after {
+      display: block;
+      position: relative;
+      content: "";
+      top: 15px;
+      background-color: #ffa500;
+      height: 1px;
+      width: auto;
+      margin: 0px -20px 0px -20px; }
 /*# sourceMappingURL=globals.css.map */
