--- a/scss/globals.scss
+++ b/scss/globals.scss
@@ -133,5 +133,22 @@ html {
 		color: $hourly-green;
 
 		background-color: rgba(37, 37, 37, 0.400);
+
+		&::after {
+			display: block;
+
+			position: relative;
+
+			content: "";
+
+			top: 15px;
+
+			background-color: #ffa500;
+
+			height: 1px;
+			width: auto;
+
+			margin: 0px -20px 0px -20px;
+		}
 	}
 }
