--- a/css/globals.css
+++ b/css/globals.css
@@ -72,6 +72,16 @@ html {
         html body #grid-container #grid-header #header-nav-login {
           grid-column: 7;
           grid-row: auto; }
+      html body #grid-container #grid-content #content-heading {
+        position: absolute;
+        top: 40px;
+        left: 20px;
+        color: #b5b5b5;
+        height: auto;
+        width: auto;
+        font-family: 'Lato', sans-serif;
+        font-weight: 100;
+        font-size: 35px; }
 
 .nav {
   color: #ffffff;
@@ -92,4 +102,5 @@ html {
       height: 1px;
       width: auto;
       margin: 0px -20px 0px -20px; }
+
 /*# sourceMappingURL=globals.css.map */
