--- a/scss/globals.scss
+++ b/scss/globals.scss
@@ -113,6 +113,24 @@ html {
 					grid-row: auto;
 				}
 			}
+
+			#grid-content {
+				#content-heading {
+					position: absolute;
+
+					top: 40px;
+					left: 20px;
+
+					color: #b5b5b5;
+
+					height: auto;
+					width: auto;
+
+					font-family: 'Lato', sans-serif;
+					font-weight: 100;
+					font-size: 35px;
+				}
+			}
 		}
 	}
 }
