--- a/css/setup.css
+++ b/css/setup.css
@@ -26,11 +26,78 @@ html {
           font-family: 'Lato', sans-serif;
           font-weight: 300;
           font-size: 19px;
+          font-style: normal;
           margin: 0 auto; }
+        html body #grid-container #grid-content #content-form-container {
+          display: grid;
+          grid-template-columns: 1fr;
+          grid-template-rows: 20px 1fr;
+          position: relative;
+          top: -30px;
+          height: 270px;
+          width: 380px;
+          margin: 0 auto; }
+          html body #grid-container #grid-content #content-form-container #container-heading {
+            grid-column: auto;
+            grid-row: 1;
+            color: #b5b5b5;
+            text-align: start;
+            font-family: 'Lato', sans-serif;
+            font-weight: 300;
+            font-size: 15px;
+            font-style: normal;
+            margin: 0 60px; }
+          html body #grid-container #grid-content #content-form-container #register-account {
+            display: grid;
+            grid-column: auto;
+            grid-row: 2;
+            grid-template-columns: 1fr;
+            grid-template-rows: 45px 45px 20px 10px 60px; }
+            html body #grid-container #grid-content #content-form-container #register-account #account-username {
+              grid-column: auto;
+              grid-row: 1; }
+            html body #grid-container #grid-content #content-form-container #register-account #account-password {
+              grid-column: auto;
+              grid-row: 2; }
+            html body #grid-container #grid-content #content-form-container #register-account #account-autogen {
+              grid-column: auto;
+              grid-row: 3; }
+            html body #grid-container #grid-content #content-form-container #register-account #account-autogen-placeholder {
+              position: relative;
+              top: -32.5px;
+              grid-column: auto;
+              grid-row: 4;
+              color: #b5b5b5;
+              font-family: 'Lato', sans-serif;
+              font-weight: 100;
+              font-size: 14px;
+              font-style: normal;
+              padding-left: 85px; }
+            html body #grid-container #grid-content #content-form-container #register-account #account-submit {
+              position: relative;
+              top: 5px;
+              grid-column: auto;
+              grid-row: 5;
+              justify-self: center;
+              -ms-flex-item-align: start;
+                  align-self: start;
+              width: 270px;
+              height: 30px;
+              background-color: #00ff88;
+              border: #00b761;
+              color: #ffffff;
+              font-family: 'Lato', sans-serif;
+              font-size: 16px;
+              font-weight: 300;
+              font-style: normal;
+              text-align: center;
+              text-decoration: underline;
+              cursor: pointer; }
 
-.input[type='text'] {
-  width: 400px;
-  height: 30px;
+.input[type='text'],
+.input[type='password'] {
+  width: 250px;
+  height: 25px;
   background-color: #454545;
   color: #ffffff;
   justify-self: center;
@@ -41,29 +108,46 @@ html {
   font-style: normal;
   border: 1px solid #00ff88;
   padding-left: 10px; }
-  .input[type='text'][type='text']:hover, .input[type='text'][type='text']:active, .input[type='text'][type='text']:focus {
+  .input[type='text'][type='text']:hover, .input[type='text'][type='text']:active, .input[type='text'][type='text']:focus,
+  .input[type='password'][type='text']:hover,
+  .input[type='password'][type='text']:active,
+  .input[type='password'][type='text']:focus {
     border: 1px solid #00ff22; }
-  .input[type='text'][type='password']:hover, .input[type='text'][type='password']:active, .input[type='text'][type='password']:focus {
+  .input[type='text'][type='password']:hover, .input[type='text'][type='password']:active, .input[type='text'][type='password']:focus,
+  .input[type='password'][type='password']:hover,
+  .input[type='password'][type='password']:active,
+  .input[type='password'][type='password']:focus {
     border: 1px solid #00ff22; }
-  .input[type='text']::-webkit-input-placeholder {
+  .input[type='text']::-webkit-input-placeholder,
+  .input[type='password']::-webkit-input-placeholder {
     color: #ffffff;
     font-family: 'Lato', sans-serif;
     font-weight: 300;
     font-style: normal; }
-  .input[type='text']:-ms-input-placeholder {
+  .input[type='text']:-ms-input-placeholder,
+  .input[type='password']:-ms-input-placeholder {
     color: #ffffff;
     font-family: 'Lato', sans-serif;
     font-weight: 300;
     font-style: normal; }
-  .input[type='text']::-ms-input-placeholder {
+  .input[type='text']::-ms-input-placeholder,
+  .input[type='password']::-ms-input-placeholder {
     color: #ffffff;
     font-family: 'Lato', sans-serif;
     font-weight: 300;
     font-style: normal; }
-  .input[type='text']::placeholder {
+  .input[type='text']::placeholder,
+  .input[type='password']::placeholder {
     color: #ffffff;
     font-family: 'Lato', sans-serif;
     font-weight: 300;
     font-style: normal; }
+
+.input[type='checkbox'] {
+  color: #454545;
+  outline: 1px solid #00ff88;
+  height: 10px;
+  width: 10px;
+  margin-left: 60px; }
 
 /*# sourceMappingURL=setup.css.map */
