--- a/scss/setup.scss
+++ b/scss/setup.scss
@@ -41,17 +41,125 @@ html {
 					font-family: 'Lato', sans-serif;
 					font-weight: 300;
 					font-size: 19px;
+					font-style: normal;
 
 					margin: 0 auto;
+				}
+
+				#content-form-container {
+					display: grid;
+
+					grid-template-columns: 1fr;
+					grid-template-rows: 20px 1fr;
+
+					position: relative;
+
+					top: -30px;
+
+					height: 270px;
+					width: 380px;
+
+					margin: 0 auto;
+
+					#container-heading {
+						grid-column: auto;
+						grid-row: 1;
+
+						color: #b5b5b5;
+
+						text-align: start;
+
+						font-family: 'Lato', sans-serif;
+						font-weight: 300;
+						font-size: 15px;
+						font-style: normal;
+
+						margin: 0 60px;
+					}
+
+					#register-account {
+						display: grid;
+
+						grid-column: auto;
+						grid-row: 2;
+
+						grid-template-columns: 1fr;
+						grid-template-rows: 45px 45px 20px 10px 60px;
+
+						#account-username {
+							grid-column: auto;
+							grid-row: 1;
+						}
+
+						#account-password {
+							grid-column: auto;
+							grid-row: 2;
+						}
+
+						#account-autogen {
+							grid-column: auto;
+							grid-row: 3;
+						}
+
+						#account-autogen-placeholder {
+							position: relative;
+
+							top: -32.5px;
+
+							grid-column: auto;
+							grid-row: 4;
+
+							color: #b5b5b5;
+
+							font-family: 'Lato', sans-serif;
+							font-weight: 100;
+							font-size: 14px;
+							font-style: normal;
+
+							padding-left: 85px;
+						}
+
+						#account-submit {
+							position: relative;
+
+							top: 5px;
+
+							grid-column: auto;
+							grid-row: 5;
+
+							justify-self: center;
+							align-self: start;
+
+							width: 270px;
+							height: 30px;
+
+							background-color: #00ff88;
+
+							border: #00b761;
+
+							color: #ffffff;
+
+							font-family: 'Lato', sans-serif;
+							font-size: 16px;
+							font-weight: 300;
+							font-style: normal;
+
+							text-align: center;
+							text-decoration: underline;
+
+							cursor: pointer;
+						}
+					}
 				}
 			}
 		}
 	}
 }
 
-.input[type='text'] {
-	width: 400px;
-	height: 30px;
+.input[type='text'],
+.input[type='password'] {
+	width: 250px;
+	height: 25px;
 
 	background-color: #454545;
 
@@ -87,4 +195,15 @@ html {
 		font-weight: 300;
 		font-style: normal;
 	}
+}
+
+.input[type='checkbox'] {
+	color: #454545;
+
+	outline: 1px solid #00ff88;
+
+	height: 10px;
+	width: 10px;
+
+	margin-left: 60px;
 }
