--- a/scss/globals.scss
+++ b/scss/globals.scss
@@ -112,6 +112,10 @@ html {
 					grid-column: 7;
 					grid-row: auto;
 				}
+				#header-nav-logout {
+					grid-column: 7;
+					grid-row: auto;
+				}
 			}
 
 			#grid-content {
