--- a/scss/setup.scss
+++ b/scss/setup.scss
@@ -62,6 +62,10 @@ html {
 					margin: 0 auto;
 
 					#container-heading {
+						position: relative;
+
+						top: -20px;
+
 						grid-column: auto;
 						grid-row: 1;
 
@@ -81,10 +85,12 @@ html {
 						position: absolute;
 
 						top: -10px;
-						right: 60px;
+						left: 60px;
 
 						grid-column: auto;
 						grid-row: 1;
+
+						justify-self: start;
 
 						color: #ff0000;
 
