--- a/css/login.css
+++ b/css/login.css
@@ -73,6 +73,17 @@ html {
               font-family: 'Lato', sans-serif;
               font-size: 12px;
               font-weight: 300; }
+          html body #grid-container #grid-content #content-login-container #login-error {
+            position: absolute;
+            -ms-flex-item-align: start;
+                align-self: start;
+            justify-self: center;
+            color: #ff0000;
+            font-family: 'Lato', sans-serif;
+            font-size: 14px;
+            font-weight: 300;
+            font-style: normal;
+            margin-top: 100px; }
 
 .input[type='text'],
 .input[type='password'] {
