--- a/scss/login.scss
+++ b/scss/login.scss
@@ -113,6 +113,21 @@ html {
 							font-weight: 300;
 						}
 					}
+					#login-error {
+						position: absolute;
+
+						align-self: start;
+						justify-self: center;
+
+						color: #ff0000;
+
+						font-family: 'Lato', sans-serif;
+						font-size: 14px;
+						font-weight: 300;
+						font-style: normal;
+
+						margin-top: 100px;
+					}
 				}
 			}
 		}
