greeting is no longer global style

--- a/css/setup.css
+++ b/css/setup.css
@@ -16,6 +16,16 @@ html {
         grid-column: auto;
         grid-row: 2;
         background-color: #454545; }
+        html body #grid-container #grid-content #content-heading {
+          position: absolute;
+          top: 40px;
+          left: 20px;
+          color: #b5b5b5;
+          height: auto;
+          width: auto;
+          font-family: 'Lato', sans-serif;
+          font-weight: 100;
+          font-size: 35px; }
         html body #grid-container #grid-content #content-setup-intro {
           position: relative;
           top: 10px;
