open sans font import

--- a/scss/globals.scss
+++ b/scss/globals.scss
@@ -1,6 +1,6 @@
 @import 'partials/_partials.scss';
 
-@import url('https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i');
+@import url('https://fonts.googleapis.com/css?family=Lato:100,300,400,400i|Open+Sans:300,400,600&subset=latin-ext');
 
 a,
 a:hover,
