--- a/css/home.css
+++ b/css/home.css
@@ -16,17 +16,123 @@ html {
         grid-column: auto;
         grid-row: 2;
         background-color: #454545; }
-        html body #grid-container #grid-content #content-setup-intro {
+        html body #grid-container #grid-content #content-greeting-container {
           position: relative;
-          top: 10px;
-          left: 20px;
-          color: #b5b5b5;
-          height: 30px;
-          width: auto;
-          font-family: 'Lato', sans-serif;
-          font-weight: 300;
-          font-size: 19px;
-          font-style: normal;
-          margin: 0 auto; }
+          height: 130px;
+          width: 400px;
+          margin: 20px 10px 0px 50px;
+          overflow: hidden; }
+          html body #grid-container #grid-content #content-greeting-container #greeting-avatar {
+            position: absolute;
+            top: 0px;
+            left: 0px;
+            height: 125px;
+            width: 125px;
+            -o-object-fit: cover;
+               object-fit: cover; }
+          html body #grid-container #grid-content #content-greeting-container #greeting-intro {
+            position: relative;
+            top: -7.5px;
+            left: 145px;
+            margin-top: 0px;
+            margin-bottom: 28px;
+            color: #ffffff;
+            font-family: 'Lato', sans-serif;
+            font-weight: 300;
+            font-size: 2.2em; }
+        html body #grid-container #grid-content #content-news-wrapper {
+          justify-self: center;
+          -webkit-box-pack: center;
+              -ms-flex-pack: center;
+                  justify-content: center;
+          -ms-flex-item-align: end;
+              align-self: end;
+          height: 600px;
+          width: 95%;
+          margin-bottom: 45px;
+          overflow: hidden; }
+          html body #grid-container #grid-content #content-news-wrapper #news-piece-container {
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+            grid-template-rows: 1fr;
+            height: 100%; }
+
+.greeting.user-information {
+  display: inline;
+  position: relative;
+  top: 0px;
+  color: #b5b5b5;
+  font-family: 'Lato', sans-serif;
+  font-weight: 300;
+  font-size: 16px;
+  margin: 0px 0px 2.5px 145px;
+  cursor: pointer; }
+  .greeting.user-information:hover {
+    text-decoration: underline; }
+
+.news.news-container {
+  display: inline-block;
+  position: relative;
+  justify-self: center;
+  -ms-flex-item-align: center;
+      align-self: center;
+  height: 95%;
+  width: 90%;
+  border: 1px solid #00ff88;
+  overflow: hidden; }
+  .news.news-container:hover {
+    border: 1px solid #00ff22; }
+.news.news-title {
+  position: absolute;
+  top: 0px;
+  color: #ffffff;
+  text-align: start;
+  font-family: 'Lato', sans-serif;
+  font-weight: 300;
+  font-size: 1.4em;
+  margin: 5px 0px 0px 5px; }
+.news.news-date {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  color: #ffffff;
+  text-align: start;
+  font-family: 'Lato', sans-serif;
+  font-weight: 300;
+  font-size: 0.8em;
+  margin: 2.5px 5px 0px 0px; }
+.news.news-author {
+  position: absolute;
+  top: 25px;
+  left: 0px;
+  color: #ffffff;
+  text-align: start;
+  font-family: 'Lato', sans-serif;
+  font-weight: 300;
+  font-size: 0.8em;
+  margin: 10px 0px 0px 5px; }
+.news.news-content-container {
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  height: 90%;
+  overflow-x: hidden;
+  overflow-y: auto; }
+  .news.news-content-container::-webkit-scrollbar {
+    width: 5px; }
+  .news.news-content-container::-webkit-scrollbar-track {
+    background: #f1f1f1; }
+  .news.news-content-container::-webkit-scrollbar-thumb {
+    background: #888; }
+  .news.news-content-container::-webkit-scrollbar-thumb:hover {
+    background: #555; }
+.news.news-content {
+  position: absolute;
+  color: #ffffff;
+  text-align: start;
+  font-family: 'Lato', sans-serif;
+  font-weight: 300;
+  font-size: 0.8em;
+  padding: 0px 50px 10px 5px; }
 
 /*# sourceMappingURL=home.css.map */
