--- a/css/roster.css
+++ b/css/roster.css
@@ -14,35 +14,34 @@ html {
       html body #grid-container #grid-content {
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 30px 1fr;
+        grid-template-rows: 1fr;
         grid-column: auto;
         grid-row: 2;
         background-color: #454545; }
-        html body #grid-container #grid-content #content-options {
-          grid-column: 1;
-          grid-row: 1; }
         html body #grid-container #grid-content #content-roster-wrapper {
           position: relative;
-          top: 10px;
+          top: 0px;
           height: 100%;
           width: 100%;
           border-top: 1px groove #ffffff;
           overflow: hidden; }
           html body #grid-container #grid-content #content-roster-wrapper table {
             display: table;
-            height: 90%;
+            height: 95%;
             width: 100%;
             border-collapse: collapse; }
             html body #grid-container #grid-content #content-roster-wrapper table th {
               position: relative;
+              top: -5px;
               color: #ffffff;
               text-align: left;
               font-family: 'Lato', sans-serif;
               font-size: inherit;
               font-weight: 300;
               font-style: normal;
-              padding: 5px 0px 20px 0px; }
+              margin-bottom: 20px; }
             html body #grid-container #grid-content #content-roster-wrapper table td {
+              width: 14.5%;
               color: #ffffff;
               text-align: left;
               font-family: 'Open Sans', sans-serif;
