--- a/scss/roster.scss
+++ b/scss/roster.scss
@@ -23,115 +23,162 @@ html {
 				display: grid;
 
 				grid-template-columns: 1fr;
-				grid-template-rows: 1fr;
+				grid-template-rows: 60px 1fr;
 
 				grid-column: auto;
 				grid-row: 2;
 
 				background-color: #454545;
 
-				#content-roster-wrapper {
-					position: relative;
+				#content-search-container {
+					grid-row: 1;
+					grid-column: 1;
 
-					top: 0px;
+					border-top: 1px groove #00ff22;
 
-					height: 100%;
-					width: 100%;
+					#search-form {
+						position: relative;
 
-					border-top: 1px groove #ffffff;
+						top: 0px;
 
-					overflow: hidden;
-
-					table {
-						display: table;
-
-						height: 95%;
-						width: 100%;
-
-						border-collapse: collapse;
-
-						th {
+						#form-employee {
 							position: relative;
 
-							top: -5px;
+							margin: 20px 0px 0px 27.5px;
+							padding: 0px;
+						}
+						#form-day {
+							position: relative;
+
+							margin: 20px 0px 0px 27.5px;
+							padding: 0px;
+						}
+						#form-location {
+							position: relative;
+
+							margin: 20px 0px 0px 27.5px;
+							padding: 0px;
+						}
+						#form-start {
+							position: relative;
+
+							margin: 20px 0px 0px 27.5px;
+						}
+						#form-end {
+							position: relative;
+
+							margin: 20px 0px 0px 27.5px;
+						}
+						#form-submit {
+							position: relative;
+
+							height: 20px;
+							width: 60px;
+
+							background: none;
+
+							border: none;
 
 							color: #ffffff;
 
-							text-align: left;
+							font-family: 'Open Sans', sans-serif;
+							font-size: 14px;
+							font-weight: 300;
+
+							margin: 20px 0px 0px 20px;
+							padding: 0px;
+
+							cursor: pointer;
+
+							&:hover {
+								text-decoration: underline;
+							}
+						}
+					}
+				}
+
+				#content-table-wrapper {
+					position: relative;
+
+					top: 10px;
+
+					height: auto;
+					width: 100%;
+
+					table {
+						height: auto;
+						width: 100%;
+						th {
+							position: relative;
+
+							top: 0px;
+
+							color: #ffffff;
+
+							text-align: center;
 
 							font-family: 'Lato', sans-serif;
 							font-size: inherit;
 							font-weight: 300;
 							font-style: normal;
 
-							margin-bottom: 20px;
+							padding-bottom: 5px;
+
+							text-decoration: underline;
 						}
 
+						tr,
 						td {
-							width: 14.5%;
-
 							color: #ffffff;
 
-							text-align: left;
+							text-align: center;
 
 							font-family: 'Open Sans', sans-serif;
 							font-size: 14px;
 							font-weight: 100;
 							font-style: normal;
-						}
-						.roster-content-container {
-							.roster-content-start {
-								position: relative;
 
-								display: inline;
-
-								font-family: 'Open Sans', sans-serif;
-								font-size: 12px;
-								font-weight: 100;
-								font-style: normal;
-
-								margin: 0;
-							}
-							.roster-content-finish {
-								position: relative;
-
-								display: inline;
-
-								font-family: 'Open Sans', sans-serif;
-								font-size: 12px;
-								font-weight: 100;
-								font-style: normal;
-
-								margin: 0;
-							}
-							.roster-content-location {
-								position: relative;
-
-								display: inline;
-
-								font-family: 'Open Sans', sans-serif;
-								font-size: 12px;
-								font-weight: 100;
-								font-style: normal;
-
-								margin: 0;
-							}
-							.roster-content-notes {
-								position: relative;
-
-								display: inline;
-
-								font-family: 'Open Sans', sans-serif;
-								font-size: 12px;
-								font-weight: 100;
-								font-style: normal;
-
-								margin: 0;
-							}
+							line-height: 15px;
 						}
 					}
 				}
 			}
 		}
+	}
+}
+
+.input[type='text'] {
+	width: 200px;
+	height: 25px;
+
+	background-color: #454545;
+
+	color: #ffffff;
+
+	justify-self: center;
+	align-self: center;
+
+	font-family: 'Lato', sans-serif;
+	font-weight: 300;
+	font-style: normal;
+
+	border: 1px solid #00ff88;
+
+	padding-left: 10px;
+
+	&[type='text']:hover,
+	&[type='text']:active,
+	&[type='text']:focus {
+		border: 1px solid #00ff22;
+	}
+
+	&::placeholder {
+		color: #ffffff;
+
+		opacity: 1;
+
+		font-family: 'Lato', sans-serif;
+		font-weight: 300;
+		font-style: normal;
 	}
 }
