--- a/css/globals.css
+++ b/css/globals.css
@@ -8,6 +8,9 @@ a:visited {
   text-decoration: none;
   cursor: pointer; }
 
+textarea {
+  resize: none; }
+
 html {
   height: 100%;
   width: 100%; }
@@ -98,4 +101,5 @@ html {
       height: 1px;
       width: auto;
       margin: 0px -10px 0px -10px; }
+
 /*# sourceMappingURL=globals.css.map */
