--- a/scss/register.scss
+++ b/scss/register.scss
@@ -28,6 +28,8 @@ html {
 				background-color: #454545;
 
 				#content-register-container {
+					position: relative;
+
 					display: grid;
 
 					grid-template-columns: 1fr;
